--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -22,57 +22,12 @@ on:
 
 
 jobs:
-  pull-images:
-    name: "Pull image for ${{ matrix.service.name }}"
+  run-e2e-tests:
+    name: "Run E2E Tests"
     runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: read
-    strategy:
-      matrix:
-        include:
-          - name: laa-submit-crime-forms
-            service_key: SUBMIT
-            sha: ${{ inputs.submit-sha }}
-            cache_key: docker-submit-${{ inputs.submit-sha }}
-          - name: laa-crime-application-store
-            service_key: APP_STORE
-            sha: ${{ inputs.appstore-sha }}
-            cache_key: docker-appstore-${{ inputs.appstore-sha }}
-          - name: laa-assess-crime-forms
-            service_key: ASSESS
-            sha: ${{ inputs.assess-sha }}
-            cache_key: docker-assess-${{ inputs.assess-sha }}
-    steps:
-      - shell: bash
-        run: mkdir -p ~/image-cache
-
-      - id: image-cache
-        uses: actions/cache@v3
-        with:
-          path: ~/image-cache
-          key: ${{ matrix.cache_key }}
-
-      - name: Configure AWS credentials and pull image
-        if: steps.image-cache.outputs.cache-hit != 'true'
-        uses: ministryofjustice/laa-reusable-github-actions/.github/actions/ecr-auth@e5500aa20b13a1406fe8a62b8788181a2ca18926
-        with:
-          ecr_role: ${{ secrets[format('{0}_DEV_ECR_ROLE_TO_ASSUME', matrix.service_key)] }}
-          ecr_region: ${{ vars[format('{0}_DEV_ECR_REGION', matrix.service_key)] }}
-          role-session-name: ${{ vars.ECR_ROLE_SESSION_NAME }}
-
-      - name: Pull and save image
-        if: steps.image-cache.outputs.cache-hit != 'true'
-        shell: bash
-        run: |
-          IMAGE_URL="${{ secrets.ECR_REGISTRY_URL }}/${{ vars[format('{0}_DEV_ECR_REPOSITORY', matrix.service_key)] }}:${{ matrix.sha }}"
-          docker pull $IMAGE_URL
-          docker save -o ~/image-cache/${{ matrix.name }}.tar $IMAGE_URL
-
-  run-e2e-tests:
-    name: "Run E2E Tests"
-    needs: pull-images
-    runs-on: ubuntu-latest
     steps:
       - name: Checkout E2E Test Repository
         uses: actions/checkout@v3
@@ -80,43 +35,68 @@ jobs:
           repository: ministryofjustice/nsm-e2e-test
           path: e2e-tests
 
-      - shell: bash
-        run: mkdir -p ~/image-cache
+      - name: Install docker-compose
+        shell: bash
+        run: sudo apt install docker-compose
 
-      - name: Restore submit image
-        uses: actions/cache@v3
-        with:
-          path: ~/image-cache
-          key: docker-submit-${{ inputs.submit-sha }}
-
-      - name: Restore appstore image
-        uses: actions/cache@v3
-        with:
-          path: ~/image-cache
-          key: docker-appstore-${{ inputs.appstore-sha }}
-
-      - name: Restore assess image
-        uses: actions/cache@v3
-        with:
-          path: ~/image-cache
-          key: docker-assess-${{ inputs.assess-sha }}
-
-      - name: Load Docker images
+      # This is required to get around a bug in the terraform module
+      - name: Extract base registry URL and set repository URLs
         shell: bash
         run: |
-          for image_tar in ~/image-cache/*.tar; do
-            docker load < "$image_tar"
-          done
+          # Extract the base registry URL (everything before the last '/')
+          SUBMIT_IMAGE_URL=${{ secrets.ECR_REGISTRY_URL }}/${{ vars.SUBMIT_DEV_ECR_REPOSITORY }}:${{ inputs.submit-sha }}
+          ASSESS_IMAGE_URL=${{ secrets.ECR_REGISTRY_URL }}/${{ vars.ASSESS_DEV_ECR_REPOSITORY }}:${{ inputs.assess-sha }}
+          APPSTORE_IMAGE_URL=${{ secrets.ECR_REGISTRY_URL }}/${{ vars.APP_STORE_DEV_ECR_REPOSITORY }}:${{ inputs.appstore-sha }}
 
-      - name: Install docker-compose
-        run: sudo apt install docker-compose
+          echo "SUBMIT_IMAGE_URL=$SUBMIT_IMAGE_URL" >> $GITHUB_ENV
+          echo "ASSESS_IMAGE_URL=$ASSESS_IMAGE_URL" >> $GITHUB_ENV
+          echo "APPSTORE_IMAGE_URL=$APPSTORE_IMAGE_URL" >> $GITHUB_ENV
+
+      # laa-submit-crime-forms
+      - name: Configure AWS credentials for laa-submit-crime-forms
+        uses: ministryofjustice/laa-reusable-github-actions/.github/actions/ecr-auth@e5500aa20b13a1406fe8a62b8788181a2ca18926
+        with:
+          ecr_role: ${{ secrets.SUBMIT_DEV_ECR_ROLE_TO_ASSUME }}
+          ecr_region: ${{ vars.SUBMIT_DEV_ECR_REGION }}
+          role-session-name: ${{ vars.ECR_ROLE_SESSION_NAME }}
+
+      - name: Pull laa-submit-crime-forms image
+        shell: bash
+        working-directory: e2e-tests
+        run: docker pull $SUBMIT_IMAGE_URL
+
+      # laa-crime-application-store
+      - name: Configure AWS credentials for laa-crime-application-store
+        uses: ministryofjustice/laa-reusable-github-actions/.github/actions/ecr-auth@e5500aa20b13a1406fe8a62b8788181a2ca18926
+        with:
+          ecr_role: ${{ secrets.APP_STORE_DEV_ECR_ROLE_TO_ASSUME }}
+          ecr_region: ${{ vars.APP_STORE_DEV_ECR_REGION }}
+          role-session-name: ${{ vars.ECR_ROLE_SESSION_NAME }}
+
+      - name: Pull laa-crime-application-store image
+        shell: bash
+        working-directory: e2e-tests
+        run: docker pull $APPSTORE_IMAGE_URL
+
+      # laa-assess-crime-forms
+      - name: Configure AWS credentials for laa-assess-crime-forms
+        uses: ministryofjustice/laa-reusable-github-actions/.github/actions/ecr-auth@e5500aa20b13a1406fe8a62b8788181a2ca18926
+        with:
+          ecr_role: ${{ secrets.ASSESS_DEV_ECR_ROLE_TO_ASSUME }}
+          ecr_region: ${{ vars.ASSESS_DEV_ECR_REGION }}
+          role-session-name: ${{ vars.ECR_ROLE_SESSION_NAME }}
+
+      - name: Pull NSCC laa-assess-crime-forms image
+        shell: bash
+        working-directory: e2e-tests
+        run: docker pull $ASSESS_IMAGE_URL
 
       - name: Build and check/wait for services
         shell: bash
         working-directory: e2e-tests
         run: |
           docker-compose build
-          docker-compose run start_applications
+          docker-compose run --build start_applications
 
       - name: Run end-to-end tests
         shell: bash
