--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -88,7 +88,7 @@ jobs:
         shell: bash
         working-directory: e2e-tests
         run: |
-          docker-compose build
+          docker-compose build --no-cache
           docker-compose run start_applications
 
       - name: Run end-to-end tests
